--- a/css/platforms/desktop.css
+++ b/css/platforms/desktop.css
@@ -1127,6 +1127,21 @@
         }
     }
 
+    #contact-section-container {
+        position: relative;
+
+        .contact-section-container__background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            min-height: 100vh;
+            object-fit: cover;
+            object-position: center;
+        }
+    }
+
     .contact-section {
         position: relative;
         width: 100%;
