--- a/css/platforms/desktop.css
+++ b/css/platforms/desktop.css
@@ -253,7 +253,7 @@
         top: 0;
         left: 0;
         box-sizing: border-box;
-        width: 100%;
+        width: 100vw;
         display: flex;
         align-items: center;
         justify-content: space-between;
