--- a/css/platforms/mobile.css
+++ b/css/platforms/mobile.css
@@ -295,6 +295,134 @@
         cursor: pointer;
     }
 
+    .drawer-menu {
+        position: fixed;
+        top: 0;
+        left: 100vw;
+        box-sizing: border-box;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: var(--gap-positive-800);
+        background-color: var(--theme-glass-fill-6);
+        box-shadow: var(--effect-box-shadow-5);
+        backdrop-filter: var(--effect-background-blur-5);
+        z-index: 3;
+        transition: 500ms ease-out;
+
+        .drawer-menu__header {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .drawer-menu__logo-full {
+            display: none;
+        }
+
+        .drawer-menu__logo-short {
+            height: 36px;
+        }
+
+        .drawer-menu__close-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: transparent;
+
+            img {
+                width: var(--icon-size-medium);
+                height: var(--icon-size-medium);
+            }
+        }
+
+        .drawer-menu__divider {
+            width: 100%;
+            height: 1px;
+            background-color: white;
+        }
+
+        .drawer-menu__items {
+            width: 100%;
+
+            ul {
+                box-sizing: border-box;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: var(--gap-positive-800);
+                border-radius: var(--shape-extra-small);
+                background-color: var(--theme-glass-fill-3);
+                box-shadow: var(--effect-inset-shadow);
+            }
+        }
+
+        .drawer-menu__item {
+            box-sizing: border-box;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            padding: var(--gap-positive-600);
+            border-radius: var(--shape-full);
+            transition: 300ms ease-out;
+
+            &:hover {
+                background-color: var(--theme-glass-fill-6);
+                box-shadow: var(--effect-box-shadow-2);
+            }
+
+            .drawer-menu-item__link {
+                width: 100%;
+                font: var(--typography-tablet-heading);
+                color: white;
+            }
+        }
+
+        .drawer-menu__social-media-networks {
+            width: 100%;
+
+            ul {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 0 var(--gap-positive-400);
+            }
+        }
+
+        .social-media-networks__item {
+            display: flex;
+            align-items: center;
+            padding-top: var(--gap-positive-300);
+            padding-bottom: 0;
+            transition: 300ms ease-out;
+
+            img {
+                width: var(--icon-size-large);
+                height: var(--icon-size-large);
+                box-shadow: var(--effect-box-shadow-1);
+                transition: 200ms ease-out;
+            }
+
+            &:hover {
+                padding-top: 0;
+                padding-bottom: var(--gap-positive-300);
+            }
+
+            &:hover > img {
+                box-shadow: var(--effect-box-shadow-3);
+            }
+        }
+    }
+
+    .drawer-menu--shown {
+        left: 0;
+    }
+
     #hero-section-container,
     #about-event-section-container,
     #schedule-section-container,
@@ -577,10 +705,12 @@
                     border-radius: var(--shape-full);
                     background-color: white;
                     transition: 300ms ease-out;
+                    cursor: pointer;
                 }
 
                 .indicator--selected {
                     width: 24px;
+                    cursor: default;
                 }
             }
 
@@ -1174,7 +1304,7 @@
                 align-items: center;
             }
 
-            .social-media-network__icon-container {
+            .social-media-networks__item {
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -1187,13 +1317,13 @@
                     padding-bottom: var(--gap-positive-200);
                     cursor: pointer;
 
-                    .social-media-network__icon {
+                    .social-media-network__logo {
                         box-shadow: var(--effect-box-shadow-3);
                     }
                 }
             }
 
-            .social-media-network__icon {
+            .social-media-network__logo {
                 width: var(--icon-size-small);
                 height: var(--icon-size-small);
                 box-shadow: var(--effect-box-shadow-1);
