--- a/css/platforms/tablet.css
+++ b/css/platforms/tablet.css
@@ -19,8 +19,6 @@
             padding: var(--gap-positive-300) var(--gap-positive-400);
             border-radius: var(--shape-extra-small);
             background-color: var(--theme-glass-fill-2);
-            outline: none;
-            border: none;
             box-shadow: var(--effect-inset-shadow);
             font: var(--typography-tablet-body);
             color: white;
@@ -51,8 +49,6 @@
             padding: var(--gap-positive-300) var(--gap-positive-400);
             border-radius: var(--shape-extra-small);
             background-color: var(--theme-glass-fill-2);
-            outline: none;
-            border: none;
             box-shadow: var(--effect-inset-shadow);
             font: var(--typography-tablet-body);
             color: white;
@@ -97,8 +93,6 @@
             padding: var(--gap-positive-300) var(--gap-positive-400);
             border-radius: var(--shape-extra-small);
             background-color: var(--theme-glass-fill-2);
-            border: none;
-            outline: none;
             box-shadow: var(--effect-inset-shadow);
             font: var(--typography-tablet-subheading);
             color: white;
@@ -194,8 +188,6 @@
             padding: var(--gap-positive-300) var(--gap-positive-400);
             border-radius: var(--shape-extra-small);
             background-color: var(--theme-glass-fill-2);
-            border: none;
-            outline: none;
             box-shadow: var(--effect-inset-shadow);
             font: var(--typography-tablet-body);
             color: white;
@@ -213,11 +205,8 @@
         justify-content: center;
         padding: var(--gap-positive-300) var(--gap-positive-600);
         border-radius: var(--shape-small);
-        outline: none;
-        border: none;
         font: var(--typography-tablet-body);
         color: white;
-        cursor: pointer;
     }
 
     .action-button--main {
@@ -291,9 +280,6 @@
         width: var(--icon-size-large);
         height: var(--icon-size-large);
         background-color: transparent;
-        border: none;
-        outline: none;
-        cursor: pointer;
     }
 
     main {
@@ -301,6 +287,134 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+    }
+
+    .drawer-menu {
+        position: fixed;
+        top: 0;
+        left: 100vw;
+        box-sizing: border-box;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: var(--gap-positive-1200) var(--gap-positive-1600);
+        background-color: var(--theme-glass-fill-6);
+        box-shadow: var(--effect-box-shadow-5);
+        backdrop-filter: var(--effect-background-blur-5);
+        z-index: 3;
+        transition: 500ms ease-out;
+
+        .drawer-menu__header {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .drawer-menu__logo-full {
+            height: 32px;
+        }
+
+        .drawer-menu__logo-short {
+            display: none;
+        }
+
+        .drawer-menu__close-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: transparent;
+
+            img {
+                width: var(--icon-size-large);
+                height: var(--icon-size-large);
+            }
+        }
+
+        .drawer-menu__divider {
+            width: 100%;
+            height: 1px;
+            background-color: white;
+        }
+
+        .drawer-menu__items {
+            width: 100%;
+
+            ul {
+                box-sizing: border-box;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: var(--gap-positive-1200);
+                border-radius: var(--shape-medium);
+                background-color: var(--theme-glass-fill-3);
+                box-shadow: var(--effect-inset-shadow);
+            }
+        }
+
+        .drawer-menu__item {
+            box-sizing: border-box;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            padding: var(--gap-positive-800);
+            border-radius: var(--shape-full);
+            transition: 300ms ease-out;
+
+            &:hover {
+                background-color: var(--theme-glass-fill-6);
+                box-shadow: var(--effect-box-shadow-2);
+            }
+
+            .drawer-menu-item__link {
+                width: 100%;
+                font: var(--typography-tablet-heading);
+                color: white;
+            }
+        }
+
+        .drawer-menu__social-media-networks {
+            width: 100%;
+
+            ul {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 0 var(--gap-positive-1200);
+            }
+        }
+
+        .social-media-networks__item {
+            display: flex;
+            align-items: center;
+            padding-top: var(--gap-positive-300);
+            padding-bottom: 0;
+            transition: 300ms ease-out;
+
+            img {
+                width: var(--icon-size-extra-large);
+                height: var(--icon-size-extra-large);
+                box-shadow: var(--effect-box-shadow-1);
+                transition: 200ms ease-out;
+            }
+
+            &:hover {
+                padding-top: 0;
+                padding-bottom: var(--gap-positive-300);
+            }
+
+            &:hover > img {
+                box-shadow: var(--effect-box-shadow-3);
+            }
+        }
+    }
+
+    .drawer-menu--shown {
+        left: 0;
     }
 
     #hero-section-container,
@@ -441,9 +555,6 @@
             padding-top: var(--gap-positive-400);
             padding-bottom: 0;
             background-color: transparent;
-            border: none;
-            outline: none;
-            cursor: pointer;
             transition: 300ms ease-out;
             animation: entrance-fly-in-up 1000ms 2250ms cubic-bezier(0, 0.4, 0.6, 1);
 
@@ -601,7 +712,6 @@
                     outline: none;
                     box-shadow: var(--effect-box-shadow-1);
                     backdrop-filter: var(--effect-background-blur-1);
-                    cursor: pointer;
                 }
             }
 
@@ -1212,7 +1322,7 @@
                 align-items: center;
             }
 
-            .social-media-network__icon-container {
+            .social-media-networks__item {
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -1225,13 +1335,13 @@
                     padding-bottom: var(--gap-positive-300);
                     cursor: pointer;
 
-                    .social-media-network__icon {
+                    .social-media-network__logo {
                         box-shadow: var(--effect-box-shadow-3);
                     }
                 }
             }
 
-            .social-media-network__icon {
+            .social-media-network__logo {
                 width: var(--icon-size-large);
                 height: var(--icon-size-large);
                 box-shadow: var(--effect-box-shadow-1);
