--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@
 * {
     padding: 0;
     margin: 0;
+    border: none;
+    outline: none;
     scroll-behavior: smooth;
 }
 
@@ -22,6 +24,7 @@ html {
     ::-webkit-scrollbar {
         display: none;
     }
+
     overflow-x: hidden;
 }
 
@@ -49,4 +52,8 @@ ul {
 
 a {
     text-decoration: none;
+}
+
+button {
+    cursor: pointer;
 }
