--- a/css/platforms/tablet.css
+++ b/css/platforms/tablet.css
@@ -1026,6 +1026,8 @@
                 position: absolute;
                 top: 0;
                 left: 0;
+                width: 100%;
+                height: 100%;
                 z-index: 0;
                 width: 100%;
                 height: 100%;
