--- a/css/platforms/mobile.css
+++ b/css/platforms/mobile.css
@@ -91,6 +91,8 @@
         }
 
         .dropdown-menu__content {
+            -webkit-appearance: none;
+            -moz-appearance: none;
             appearance: none;
             width: 100%;
             display: inline;
