--- a/css/platforms/tablet.css
+++ b/css/platforms/tablet.css
@@ -87,6 +87,8 @@
         }
 
         .dropdown-menu__content {
+            -webkit-appearance: none;
+            -moz-appearance: none;
             appearance: none;
             width: 100%;
             display: inline;
