--- a/css/platforms/desktop.css
+++ b/css/platforms/desktop.css
@@ -45,6 +45,9 @@
         }
 
         .date-picker__data-field {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
             box-sizing: border-box;
             width: 100%;
             padding: var(--gap-positive-300) var(--gap-positive-400);
